--- a/src/Container/header/header.css
+++ b/src/Container/header/header.css
@@ -160,3 +160,81 @@
             line-height: 16px;
         }
 }
+
+
+
+.gpt3__cta {
+    border: 1px solid white;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    padding: 2rem;
+    margin: 4rem;
+    border-radius: 1rem;
+    background: var(--gradient-bar);
+}
+
+.gpt3__cta-content p {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 30px;
+    color: #0E0E0E;
+}
+
+.gpt3__cta-content h3 {
+    font-family: 'Manrope';
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 45px;
+    /* or 188% */
+    color: #000000; 
+}
+
+.gpt3__cta-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2rem ;
+}
+
+.gpt3__cta-btn button {  
+background: #000000;
+border-radius: 40px;
+font-family: 'Manrope';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 30px;
+width: 189.14px;
+height: 59.4px;
+cursor: pointer;
+border: none;
+outline: none;
+
+color: #FFFFFF;
+}
+
+@media screen and (max-width:650px) {
+    .gpt3__cta {
+        flex-direction: column;
+    }
+    .gpt3__cta-btn {
+        margin: 2rem 0 0;
+    }
+}
+@media screen and (max-width:560px){
+    .gpt3__cta {
+        margin: 4rem 2rem;
+    }
+    .gpt3__cta-content h3 {
+        font-size: 18px;
+        line-height: 32px;
+    }
+    .gpt3__cta-btn button {
+        font-size: 14px;
+        line-height: 28px;
+    }
+}
